fix(jdk17): batch-4 adaptations for the 26.9.1 backport
Catalog rewrites for the constructs javac rejects under --release 17, plus
five that needed a decision:
- LocalSchema type load, Type.convert's date arm, SQLFunctionIf, and
  GraphQLResultSet's two projection chains: pattern-matching switches ported
  onto if/instanceof, keeping upstream's arm order, its new Number arm, its
  #6356 register-on-engine-failure semantics, its #6826 optional false branch
  and its #6835 mapByReturnType fix for the EmbeddedDocument arm
- Issue6592CompactedRootPageDescendingStepBackTest: List.reversed() is
  SequencedCollection (JDK 21), replaced with an explicit reversed copy