@@ -125,7 +125,7 @@ public class GraphQLSchema {
     try {
       final Map<String, Object> variables = resolveVariables(op, parameters);
 
-      final Selection selection = op.getSelectionSet().getSelections().getFirst();
+      final Selection selection = op.getSelectionSet().getSelections().get(0);
       final FieldWithAlias aliasField = selection.getFieldWithAlias();
       queryName = aliasField != null ? aliasField.getName() : selection.getName();
 
